--- a/akash-portfolio-website/index.html
+++ b/akash-portfolio-website/index.html
@@ -25,7 +25,7 @@
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href="assets/css/styles.css">
 
-    <title> Hailee's Portfolio </title>
+    <title> Akash's Portfolio </title>
 </head>
 
 <body>
@@ -870,5 +870,6 @@
     <!--=============== MAIN JS ===============-->
     <script src="assets/js/main.js"></script>
 </body>
+
 
 </html>
